--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
+    <link rel="preload" as="image" href="/assets/chiropractor1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Leading Chiropractors in Sydney’s Northern Beaches" />
     <title>Complete Chiropractic</title>
